[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sleeping wisp.png" type="Texture" id=1]
[ext_resource path="res://scenes/wisps/WispBase.gd" type="Script" id=2]
[ext_resource path="res://assets/shadow.png" type="Texture" id=3]
[ext_resource path="res://assets/shadow far.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[node name="Wisp" type="Area2D"]
angular_damp = 50.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShadowFar" type="Sprite" parent="."]
position = Vector2( 0, 12 )
texture = ExtResource( 4 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 6 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3 )
texture = ExtResource( 1 )

[node name="TerrainTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="." to="." method="_on_Wisp_area_entered"]
[connection signal="timeout" from="TerrainTimer" to="." method="_on_TerrainTimer_timeout"]
